--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,44 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 楷体,宋体,Microsoft YaHei,sans-serif;
+}
 html,
 body {
-    width: 1100px;
+    width: 100%;
     height: 100px;
     background: #f2f2f2;
 }
+
+
+/* 头部样式 */
 header {
     width: 100%;
     height: 40px;
 }
 header>h1 {
+    widows: 100%;
+    height: 100%;
     font-size: 30px;
-    color: pink;
+    background: #2b4b6b;
+    color: white;
+    text-align: center;
+    line-height: 40px;
+}
+
+
+/* 主要内容样式 */
+main {
+    width: 100%;
+    height: 500px;
+    background: pink;
+}
+
+
+/* 底部样式 */
+footer {
+    width: 100%;
+    height: 150px;
+    background: skyblue;
 }
