--- a/css/index.css
+++ b/css/index.css
@@ -29,16 +29,9 @@ header>h1 {
 
 
 /* 主要内容样式 */
-main {
+.index {
     width: 100%;
-    height: 500px;
-    background: pink;
-}
-
-
-/* 底部样式 */
-footer {
-    width: 100%;
-    height: 150px;
-    background: skyblue;
+    height: 100%;
+    background: url("./imgs/index_bg.jpg") no-repeat;
+    background-size: contain;
 }
