--- a/css/index.css
+++ b/css/index.css
@@ -7,31 +7,49 @@
 html,
 body {
     width: 100%;
-    height: 100px;
+    height: 100%;
     background: #f2f2f2;
 }
 
 
-/* 头部样式 */
-header {
-    width: 100%;
-    height: 40px;
-}
-header>h1 {
-    widows: 100%;
-    height: 100%;
-    font-size: 30px;
-    background: #2b4b6b;
-    color: white;
-    text-align: center;
-    line-height: 40px;
-}
-
-
 /* 主要内容样式 */
-.index {
+.container {
     width: 100%;
     height: 100%;
-    background: url("./imgs/index_bg.jpg") no-repeat;
-    background-size: contain;
+    background: url("../imgs/index.jpg") no-repeat center;
+    background-size: cover;
+}
+
+
+/* 蒙板 */
+.mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .2);
+    color: white;
+    font-size: 25px;
+}
+.mask .text {
+    display: block;
+    position: absolute;
+    top: 30%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
+    text-align: center;
+}
+.mask .text h1,
+.mask .text p {
+    margin: 20px 0;
+}
+.mask .text button {
+    margin: 30px 0;
+    width: 100px;
+    height: 40px;
+    border: white solid 2px;
+    background: none;
+    color: white;
 }
