--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 楷体,宋体,Microsoft YaHei,sans-serif;
-}
-html,
-body {
-    width: 100%;
-    height: 100%;
-    background: #f2f2f2;
-}
-
-
 /* 主要内容样式 */
 .container {
     width: 100%;
@@ -49,7 +35,8 @@ body {
     margin: 30px 0;
     width: 100px;
     height: 40px;
-    border: white solid 2px;
+    border: white solid 1px;
+    border-radius: 6px;
     background: none;
     color: white;
 }
