--- a/css/public.css
+++ b/css/public.css
@@ -10,3 +10,11 @@ body {
     height: 100%;
     background: #f2f2f2;
 }
+button {
+    outline: none;
+}
+a {
+    list-style: none;
+    text-decoration: none;
+    color: white;
+}
